chore: work on api
